<resources>
    <string name="app_name">Projeto Guarani</string>
    <string name="str_register_clients">Register Clients</string>
    <string name="str_guarani_sistemas" translatable="false">Guarani sistemas</string>
    <string name="str_company_logo">Company logo</string>
    <string name="str_home" translatable="false">Home</string>
    <string name="str_clients_consult">Consult clients</string>
    <string name="str_cnpj">Company</string>
    <string name="str_cpf">People</string>
    <string name="str_register_client">Register client</string>
    <string name="str_menu">Menu</string>
    <string name="str_close">Close</string>
    <string name="str_invalid_request">Invalid request!</string>
    <string name="str_tab_layout" translatable="false">Tab Layout</string>
    <string name="str_insert_cnpj">Insert CNPJ</string>
    <string name="str_register_company">Register Company</string>
    <string name="str_reason_company">Reason Company</string>
    <string name="str_fantasy_name">Fantasy name</string>
    <string name="str_best_email">Best email</string>
    <string name="str_secondary_email">Secondary email</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_number">Number</string>
    <string name="str_cep" translatable="false">CEP</string>
    <string name="str_complement">Complement</string>
    <string name="str_add_address">+ Add address</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_register_people">Register people</string>
    <string name="str_insert_name">Insert name</string>
    <string name="str_consult_clients">Consult clients</string>
    <string name="str_select_type_search">Select type search: </string>
    <string name="str_insert_name_search">Insert name search</string>
    <string name="str_button_search">Button search</string>
    <string name="str_button_options">Button options</string>
    <string name="str_products">Products</string>
    <string name="str_price_min">Price mim: %1s</string>
    <string name="str_price_max">Price max: %1s</string>
    <string name="str_stock_value">Stock: %1s</string>
    <string name="str_cod_value">Cod product: %1s</string>
    <string name="str_all_price">All Prices</string>
    <string name="str_button_close">Button Close</string>
    <string name="str_stock">Stock</string>
    <string name="str_release">Release</string>
    <string name="str_normal">Normal</string>
    <string name="str_promotion">Promotion</string>
    <string name="str_loading">Loading....</string>
    <string name="str_invalid_text_field">Invalid input!</string>
    <string name="str_edit">Edit</string>
    <string name="str_delete">Delete</string>
    <string name="str_cnpj_cpf" translatable="false">Cnpj/Cpf: %1s</string>
    <string name="str_email" translatable="false">Email: %1s</string>
    <string name="str_dt_register">Register: %1s</string>
    <string name="str_delete_success">Delete Success!</string>
    <string name="str_client_detail">Client Detail</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_success">Success!</string>
    <string name="str_insert_cpf">Insert Cpf</string>
    <string name="str_insert_district">Insert District</string>
    <string name="str_cod_1s">Cod: %1s</string>
    <string name="str_reason_1s">Reason: %1s</string>
    <string name="str_fantasy">Fantasy name: %1s</string>
    <string name="str_cnpj_cpf_1" translatable="false">CNPJ/CPF: %1s</string>
    <string name="str_email_1" translatable="false">Email: %1s</string>
    <string name="str_email_sec">Sec Email: %1s</string>
    <string name="str_address_1">Address: %1s</string>
    <string name="str_number_1">Number: %1s</string>
    <string name="str_cep_1" translatable="false">CEP: %1s</string>
    <string name="str_complement_1">Complement: %1s</string>
    <string name="str_district">District: %1s</string>
    <string name="str_register">Date Register: %1s</string>
</resources>