<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tlb_custom"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/menu_line"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="?attr/colorOnPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center|start"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="15sp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@string/str_select_type_search"/>

            <Spinner
                android:id="@+id/spn_select_type_search"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_search"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="text"
                android:textColorHint="?attr/colorOnPrimary"
                android:autofillHints="no"
                android:textColor="?attr/colorOnPrimary"
                android:hint="@string/str_insert_name_search"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/str_button_search"
                android:src="@drawable/search_line"/>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>